--- a/nodejs/src/App.module.css
+++ b/nodejs/src/App.module.css
@@ -1,11 +1,16 @@
+* {
+    box-sizing: border-box;
+}
+
 .app {
     position: relative;
-    width: 30%;
+    width: 25%;
     margin: 15% auto;
     padding: 1% 1%;
     background-color: white;
     border-radius: 4px;
-    border: 1px green solid
+    border: 1px green solid;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .app_header {
@@ -19,7 +24,7 @@
 
 input {
     width: 90%;
-    padding: 10px 0;
+    padding: 10px 10px 0;
 }
 
 input:hover {
@@ -55,8 +60,8 @@ button:hover {
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 90%;
-    margin: 10px 0;
+    width: 100%;
+    margin: 20px 0;
     border: 2px blue solid;
 }
 
@@ -65,17 +70,17 @@ button:hover {
 }
 
 .app_footer {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: relative;
+    margin-top: 20px;
 } 
 
 .app_footer p {
     margin: 0;
     padding: 10px 0;
     font-size: 20px;
-    font-weight: bold;
 }
 
 .app_footer button {
