--- a/nodejs/src/components/Todo/Todo.module.css
+++ b/nodejs/src/components/Todo/Todo.module.css
@@ -3,23 +3,32 @@
     display:flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0;
+    margin: 5px 0 0 0;
     padding: 0;
+    background-color: lightgrey;
+    z-index: 10;
+}
+
+.mark_complete {
+    position: absolute;
+    width: 5%;
+    height: 15px;
+    left: 0;
 }
 
 .task_name {
+    width: 85%;
     margin: 10px 0 10px 10px;
-    width: 80%;
-    padding: 0;
-    /* border: 1px red solid; */
+    padding: 0 0 0 7%;
     font-size: 19px;
+    word-wrap: break-word;
 }
 
 .bin_icon {
     width: 45px;
     height: 30px;
     padding: 0 10px;
-    background-color: white;
+    background-color: lightgrey;
 }
 
 .bin_icon:hover {
