--- a/nodejs/src/components/Todo/Todo.module.css
+++ b/nodejs/src/components/Todo/Todo.module.css
@@ -12,7 +12,7 @@
 .mark_complete {
     position: absolute;
     width: 5%;
-    height: 15px;
+    height: 12px;
     left: 0;
 }
 
@@ -28,7 +28,7 @@
     width: 45px;
     height: 30px;
     padding: 0 10px;
-    background-color: lightgrey;
+    /* background-color: lightgrey; */
 }
 
 .bin_icon:hover {
