--- a/nodejs/src/components/Todo/Todo.module.css
+++ b/nodejs/src/components/Todo/Todo.module.css
@@ -1,11 +1,33 @@
-.todo_container {
+.todo_container_green {
     position: relative;
     display:flex;
     justify-content: space-between;
     align-items: center;
     margin: 5px 0 0 0;
     padding: 0;
-    background-color: lightgrey;
+    background-color: lightgreen;
+    z-index: 10;
+}
+
+.todo_container_orange {
+    position: relative;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px 0 0 0;
+    padding: 0;
+    background-color: orange;
+    z-index: 10;
+}
+
+.todo_container_red {
+    position: relative;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px 0 0 0;
+    padding: 0;
+    background-color: red;
     z-index: 10;
 }
 
@@ -17,17 +39,26 @@
 }
 
 .task_name {
-    width: 85%;
+    width: 80%;
     margin: 10px 0 10px 10px;
     padding: 0 0 0 7%;
     font-size: 19px;
     word-wrap: break-word;
 }
 
+.task_priority {
+    margin: 0 auto;
+    padding: 0 5px;
+    font-weight: bold;
+    text-align: left;
+}
+
 .bin_icon {
-    width: 45px;
-    height: 30px;
-    padding: 0 10px;
+    position: relative;
+    width: 50px;
+    height: 40px;
+    margin: auto;
+    padding: 5px 10px;
     /* background-color: lightgrey; */
 }
 
@@ -35,5 +66,5 @@
     cursor: pointer;
     width: 50px;
     height: 40px;
-    padding: 0 10px;
+    padding: 0 5px;
 }
