--- a/nodejs/src/components/Todo/Todo.module.css
+++ b/nodejs/src/components/Todo/Todo.module.css
@@ -1,33 +1,54 @@
+.large_container {
+    position: relative;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    margin: 5px 0 0 0;
+}
+
 .todo_container_green {
     position: relative;
     display:flex;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
-    margin: 5px 0 0 0;
     padding: 0;
     background-color: lightgreen;
     z-index: 10;
 }
 
-.todo_container_orange {
+.todo_container_yellow {
     position: relative;
     display:flex;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
-    margin: 5px 0 0 0;
     padding: 0;
-    background-color: orange;
+    background-color: gold;
     z-index: 10;
 }
 
 .todo_container_red {
     position: relative;
     display:flex;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
-    margin: 5px 0 0 0;
     padding: 0;
-    background-color: red;
+    background-color: lightcoral;
+    z-index: 10;
+}
+
+.todo_container_white {
+    position: relative;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+    background-color: white;
+    border: 1px black solid;
     z-index: 10;
 }
 
@@ -39,7 +60,8 @@
 }
 
 .task_name {
-    width: 80%;
+    max-width: 80%;
+    width: 79%;
     margin: 10px 0 10px 10px;
     padding: 0 0 0 7%;
     font-size: 19px;
@@ -48,9 +70,13 @@
 
 .task_priority {
     margin: 0 auto;
+    min-width: 40px;
+    height: inherit;
     padding: 0 5px;
+    font-size: 15px;
     font-weight: bold;
-    text-align: left;
+    text-align: center;
+    text-transform: capitalize;
 }
 
 .bin_icon {
@@ -67,4 +93,11 @@
     width: 50px;
     height: 40px;
     padding: 0 5px;
+}
+
+.edit_icon {
+    position: relative;
+    width: 35px;
+    height: 35px;
+    padding: 5px;
 }
