--- a/nodejs/src/components/Todo/Todo.module.css
+++ b/nodejs/src/components/Todo/Todo.module.css
@@ -13,7 +13,7 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
+    padding: 5px 0;
     background-color: lightgreen;
     z-index: 10;
 }
@@ -24,7 +24,7 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
+    padding: 5px 0;
     background-color: gold;
     z-index: 10;
 }
@@ -35,7 +35,7 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
+    padding: 5px 0;
     background-color: lightcoral;
     z-index: 10;
 }
@@ -46,7 +46,7 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
+    padding: 5px 0;
     background-color: white;
     border: 1px black solid;
     z-index: 10;
@@ -63,13 +63,13 @@
     max-width: 80%;
     width: 79%;
     margin: 10px 0 10px 10px;
-    padding: 0 0 0 7%;
+    padding: 0 0 0 30px;
     font-size: 19px;
     word-wrap: break-word;
 }
 
 .task_priority {
-    margin: 0 auto;
+    margin: auto;
     min-width: 40px;
     height: inherit;
     padding: 0 5px;
@@ -100,4 +100,74 @@
     width: 35px;
     height: 35px;
     padding: 5px;
+}
+
+
+@media (max-width: 599px) {
+    .task_name {
+        margin: 0 0 0 10px;
+        padding: 5px 0 5px 15px;
+        font-size: 16px;
+    }
+    .task_priority {
+        min-width: 36px;
+    }
+    .bin_icon, .edit_icon {
+        width: 45px;
+        height: 35px;
+        margin: auto;
+        padding: 5px 5px;
+    }
+    .bin_icon:hover {
+        width: 45px;
+        height: 35px;
+        margin: auto;
+        padding: 5px 5px;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 767px) {
+    .task_name {
+        margin: 0 0 0 10px;
+        padding: 5px 0 5px 20px;
+        font-size: 16px;
+    }
+    .task_priority {
+        min-width: 36px;
+    }
+    .bin_icon, .edit_icon {
+        width: 45px;
+        height: 35px;
+        margin: auto;
+        padding: 5px 5px;
+    }
+    .bin_icon:hover {
+        width: 45px;
+        height: 35px;
+        margin: auto;
+        padding: 5px 5px;
+    }
+}
+
+@media (orientation: landscape) and (max-width: 767px) {
+    .task_name {
+        margin: 0 0 0 10px;
+        padding: 5px 0 5px 20px;
+        font-size: 16px;
+    }
+    .task_priority {
+        min-width: 36px;
+    }
+    .bin_icon, .edit_icon {
+        width: 45px;
+        height: 35px;
+        margin: auto;
+        padding: 5px 5px;
+    }
+    .bin_icon:hover {
+        width: 45px;
+        height: 35px;
+        margin: auto;
+        padding: 5px 5px;
+    }
 }
