--- a/nodejs/src/components/Todo/Todo.module.css
+++ b/nodejs/src/components/Todo/Todo.module.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     justify-content: center;
     margin: 0;
-    padding: 0 ;
+    padding: 0;
 }
 
 .up_arrow, .down_arrow {
@@ -28,62 +28,27 @@
     background-color: aqua;
 }
 
-.todo_container_green {
+.todo_container {
     position: relative;
     display:flex;
     width: 100%;
     justify-content: space-between;
     align-items: center;
     padding: 5px 0;
-    background-color: lightgreen;
     z-index: 10;
 }
 
-.todo_container_yellow {
-    position: relative;
-    display:flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 0;
-    background-color: gold;
-    z-index: 10;
-}
-
-.todo_container_red {
-    position: relative;
-    display:flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 0;
-    background-color: lightcoral;
-    z-index: 10;
-}
-
-.todo_container_grey {
-    position: relative;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 0;
-    background-color: lightgrey;
-    z-index: 10;
-}
-
-.mark_complete {
+.check_completed {
     position: absolute;
-    width: 5%;
-    height: 12px;
+    width: 20px;
+    height: 13px;
     left: 0;
 }
 
 .task_name {
-    max-width: 80%;
-    width: 79%;
-    margin: 10px 0 10px 10px;
-    padding: 0 0 0 30px;
+    width: 85%;
+    margin: 10px 0;
+    padding: 0 0 0 35px;
     font-size: 19px;
     word-wrap: break-word;
 }
@@ -103,7 +68,7 @@
     position: relative;
     width: 50px;
     height: 40px;
-    margin: auto;
+    /* margin: auto; */
     padding: 5px 10px;
     /* background-color: lightgrey; */
 }
@@ -126,6 +91,9 @@
     .up_arrow, .down_arrow {
         height: 23px;
     }
+    .check_completed {
+        height: 12px;
+    }
     .task_name {
         margin: 0 0 0 10px;
         padding: 5px 0 5px 15px;
@@ -133,6 +101,7 @@
     }
     .task_priority {
         min-width: 36px;
+        font-size: 13px;
     }
     .bin_icon {
         width: 45px;
@@ -159,8 +128,12 @@
         padding: 5px 0 5px 20px;
         font-size: 16px;
     }
+    .check_completed {
+        height: 12px;
+    }
     .task_priority {
         min-width: 36px;
+        font-size: 13px;;
     }
     .bin_icon {
         width: 45px;
