--- a/nodejs/src/components/Body/Body.module.css
+++ b/nodejs/src/components/Body/Body.module.css
@@ -17,6 +17,7 @@
     padding: 10px 10px;
     font-size: 16px;
     border: 1px solid black;
+    background-color: var(--input-bg);
 }
 
 .add_task_input:hover {
@@ -38,6 +39,7 @@
     margin: 0 auto;
     font-size: 17px;
     font-weight: bold;
+    color: var(--font-color);
 }
 
 .hidden_priority_label {
@@ -49,6 +51,7 @@
     padding: 0;
     height: 100%;
     font-size: 15px;
+    background-color: var(--input-bg);
     border-radius: 4px;
     border: 1px solid black;
 }
@@ -63,7 +66,7 @@ button {
 
 button:hover {
     cursor: pointer;
-    background-color: lightblue;
+    background-color: cyan;
     color: black;
 }
 
